[workspace]
members = ["crates/*", "examples/*"]
resolver = "3"

[workspace.package]
authors = ["aecsocket <aecsocket@tutanota.com>"]
categories = ["game-development", "network-programming"]
edition = "2024"
keywords = ["gamedev", "network", "bevy"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/aecsocket/aeronet"
rust-version = "1.85.0"

[workspace.lints.rust]
missing_docs = "warn"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(fuzzing)'] }

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

alloc_instead_of_core = "warn"
std_instead_of_alloc = "warn"
std_instead_of_core = "warn"
unwrap_used = "warn"

module_name_repetitions = "allow"
needless_pass_by_value = "allow"
similar_names = "allow"
too_many_arguments = "allow"
type_complexity = "allow"

[workspace.dependencies]
# aeronet
# core
aeronet = { version = "0.12.0", path = "crates/aeronet" }
aeronet_io = { version = "0.12.0", path = "crates/aeronet_io" }
aeronet_transport = { version = "0.12.0", path = "crates/aeronet_transport" }

# io
aeronet_websocket = { version = "0.12.0", path = "crates/aeronet_websocket" }
aeronet_webtransport = { version = "0.12.0", path = "crates/aeronet_webtransport" }

# integration
aeronet_replicon = { version = "0.13.0", path = "crates/aeronet_replicon" }

# generic

anyhow = { version = "1.0.97", default-features = false }
arbitrary = { version = "1.3.2", features = ["derive"] }
base64 = "0.22.1"
bitvec = "1.0.1"
bytes = { version = "1.6.1", default-features = false }
cfg-if = "1.0.0"
clap = { version = "4.5.32", features = ["derive"] }
derive_more = { version = "2.0.1", default-features = false }
document-features = "0.2.11"
egui_plot = "0.29.0"
either = "1.15.0"
futures = "0.3.30"
itertools = "0.14.0"
octs = "1.0.0"
oneshot = "0.1.11"
replace_with = "0.1.7"
ringbuf = "0.4.1"
serde = { version = "1.0.219", features = ["derive"] }
size_format = "1.0.2"
sync_wrapper = "1.0.1"
thousands = "0.2.0"
tracing = { version = "0.1.40", default-features = false }
typesize = "0.1.13"
web-time = "1.1.0"

# native

tokio = "1.39.2"

# wasm

gloo-timers = "0.3.0"
js-sys = "0.3.70"
wasm-bindgen = "0.2.99"
wasm-bindgen-futures = "0.4.43"
web-sys = "0.3.70"

# bevy

bevy = { version = "0.16.0-rc.1" }
bevy_app = { version = "0.16.0-rc.1", default-features = false }
bevy_derive = { version = "0.16.0-rc.1", default-features = false }
bevy_ecs = { version = "0.16.0-rc.1", default-features = false }
bevy_reflect = { version = "0.16.0-rc.1", default-features = false }
bevy_time = { version = "0.16.0-rc.1", default-features = false }
bevy_winit = { version = "0.16.0-rc.1", default-features = false }

bevy_egui = "0.31.1"

# tls

rustls = "0.23.23"
rustls-native-certs = "0.8.0"
tokio-rustls = "0.26.2"

# aeronet_channel

flume = "0.11.0"

# aeronet_steam

# bevy-steamworks = "0.12.0"
# steamworks = "0.11.0"

# aeronet_websocket

rcgen = "0.13.1"
tokio-tungstenite = "0.26.2"

# aeronet_webtransport
# core
xwt-core = "0.6.0"

# native
spki = "0.7.3"
wtransport = "0.6.0"
x509-cert = "0.2.5"
xwt-wtransport = "0.13.2"

# wasm
xwt-web = "0.15.0"

# aeronet_replicon

bevy_replicon = { version = "0.31.0", default-features = false }

[workspace.metadata.cargo-shear]
ignored = [
    "bevy_winit", # see `aeronet_transport` feature `document-features`
]
