[workspace]
resolver = "3"
members = ["crates/*", "examples"]

[workspace.package]
edition = "2024"
rust-version = "1.88.0"
repository = "https://github.com/aecsocket/aeronet"
license = "MIT OR Apache-2.0"
keywords = ["bevy", "gamedev", "network"]
categories = ["game-development", "network-programming"]

[workspace.dependencies]
aeronet = { path = "crates/aeronet", version = "0.17.2", default-features = false }
aeronet_channel = { path = "crates/aeronet_channel", version = "0.17.2" }
aeronet_io = { path = "crates/aeronet_io", version = "0.17.2", default-features = false }
aeronet_replicon = { path = "crates/aeronet_replicon", version = "0.17.2", default-features = false }
aeronet_transport = { path = "crates/aeronet_transport", version = "0.17.2", default-features = false }
aeronet_websocket = { path = "crates/aeronet_websocket", version = "0.17.2" }
aeronet_webtransport = { path = "crates/aeronet_webtransport", version = "0.17.2" }
anyhow = { version = "1.0.97", default-features = false }
arbitrary = { version = "1.3.2", features = ["derive"] }
base64 = { version = "0.22.1" }
bevy = { version = "0.17.2" }
bevy_app = { version = "0.17.2", default-features = false }
bevy_ecs = { version = "0.17.2", default-features = false }
bevy_egui = { version = "0.37.0" }
bevy_platform = { version = "0.17.2", default-features = false }
bevy_reflect = { version = "0.17.2", default-features = false }
bevy_replicon = { version = "0.37.0", default-features = false }
bevy_state = { version = "0.17.2", default-features = false }
bevy_time = { version = "0.17.2", default-features = false }
bevy_winit = { version = "0.17.2", default-features = false }
bit-vec = { version = "0.8.0", default-features = false }
blocking = { version = "1.6.1" }
bytes = { version = "1.6.1", default-features = false }
cfg-if = { version = "1.0.0" }
clap = { version = "4.5.32", features = ["derive"] }
derive_more = { version = "2.0.1", default-features = false }
document-features = { version = "0.2.11" }
egui_plot = { version = "0.33.0" }
either = { version = "1.15.0", default-features = false }
flume = { version = "0.11.0" }
futures = { version = "0.3.30" }
gloo-timers = { version = "0.3.0" }
itertools = { version = "0.14.0" }
js-sys = { version = "0.3.70" }
log = { version = "0.4.26" }
octs = { version = "1.0.0", default-features = false }
oneshot = { version = "0.1.11" }
rcgen = { version = "0.13.1" }
ringbuf = { version = "0.4.8", default-features = false }
rustls = { version = "0.23.23" }
rustls-native-certs = { version = "0.8.0" }
serde = { version = "1.0.219", features = ["derive"] }
size_format = { version = "1.0.2" }
spki = { version = "0.7.3" }
steamworks = { version = "0.12.2" }
sync_wrapper = { version = "1.0.1" }
thousands = { version = "0.2.0" }
tokio = { version = "1.39.2" }
tokio-rustls = { version = "0.26.2" }
tokio-tungstenite = { version = "0.26.2" }
tracing = { version = "0.1.40", default-features = false }
typesize = { version = "0.1.14", default-features = false }
wasm-bindgen = { version = "0.2.101" }
wasm-bindgen-futures = { version = "0.4.51" }
web-sys = { version = "0.3.70" }
wtransport = { version = "0.6.1" }
x509-cert = { version = "0.2.5" }
xwt-core = { version = "0.6.0" }
xwt-web = { version = "0.15.0" }
xwt-wtransport = { version = "0.13.2" }

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
alloc_instead_of_core = "warn"
module_name_repetitions = "allow"
needless_pass_by_value = "allow"
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
similar_names = "allow"
std_instead_of_alloc = "warn"
std_instead_of_core = "warn"
too_many_arguments = "allow"
type_complexity = "allow"
unwrap_used = "warn"

[workspace.lints.rust]
missing_docs = "warn"
unexpected_cfgs = { level = "warn", check-cfg = [
  "cfg(fuzzing)",
  "cfg(docsrs_aeronet)"
] }
