[package]
name = "aeronet"
description = "Lightweight client/server transport abstraction"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true

[features]
### Allows creating some types with [`arbitrary`](https://docs.rs/arbitrary).
arbitrary = ["dep:arbitrary"]

## Enables serialization of certain types with [`serde`](https://docs.rs/serde).
serde = ["dep:serde"]

## Enables serialization of certain types with [`bitcode`](https://docs.rs/bitcode).
bitcode = ["dep:bitcode"]

## Enables the [`condition`] module.
condition = ["dep:rand", "dep:rand_distr"]

## Enables [`bevy`](https://docs.rs/bevy) support.
bevy = ["dep:bevy_ecs", "dep:bevy_app"]

## Allows storing an async multi-threaded [`tokio`](https://docs.rs/tokio) runtime in a
## [`bevy`](https://docs.rs/bevy) resource.
bevy-tokio-rt = ["bevy", "dep:tokio"]

[dependencies]
aeronet_derive.workspace = true
derivative.workspace = true
bytes.workspace = true

serde = { workspace = true, optional = true }

bitcode = { workspace = true, optional = true }

arbitrary = { workspace = true, optional = true }

rand = { workspace = true, optional = true }
rand_distr = { workspace = true, optional = true }

bevy_ecs = { workspace = true, optional = true }
bevy_app = { workspace = true, optional = true }

tokio = { workspace = true, optional = true, features = ["rt-multi-thread"] }
