[package]
description = "Lightweight client/server transport abstraction"
name = "aeronet"

authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true

[features]
## Enables serialization of certain types with [`serde`](https://docs.rs/serde).
serde = ["dep:serde"]

## Enables the [`condition`] module.
condition = ["dep:rand", "dep:rand_distr"]

## Enables [`bevy`](https://docs.rs/bevy) support.
bevy = ["dep:bevy_ecs", "dep:bevy_app"]

## Enables [`bevy_replicon`](https://docs.rs/bevy) support.
replicon = ["bevy", "dep:bevy_replicon"]

## Allows storing an async multi-threaded [`tokio`](https://docs.rs/tokio) runtime in a
## [`bevy`](https://docs.rs/bevy) resource.
bevy-tokio-rt = ["bevy", "dep:tokio"]

[dependencies]
aeronet_derive = { workspace = true }

arbitrary = { workspace = true }
bytes = { workspace = true }
derivative = { workspace = true }

serde = { workspace = true, optional = true }

bitcode = { workspace = true, optional = true }

rand = { workspace = true, optional = true }
rand_distr = { workspace = true, optional = true }

bevy_app = { workspace = true, optional = true }
bevy_ecs = { workspace = true, optional = true }

tokio = { workspace = true, optional = true, features = ["rt-multi-thread"] }

bevy_replicon = { workspace = true, optional = true }
