[package]
description = "Lightweight client/server transport abstraction"
name = "aeronet"

authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true

[features]
## Enables the [`condition`] module.
condition = ["dep:rand", "dep:rand_distr"]

## Enables [`bevy`](https://docs.rs/bevy) support.
bevy = ["dep:bevy_ecs"]

[dependencies]
arbitrary = { workspace = true }
bytes = { workspace = true }
derivative = { workspace = true }
web-time = { workspace = true }

rand = { workspace = true, optional = true }
rand_distr = { workspace = true, optional = true }

bevy_ecs = { workspace = true, optional = true }

[dev-dependencies]
bevy_app = { workspace = true }
