[package]
name = "aeronet_channel"
description = "In-memory MPSC channel transport implementation for aeronet"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true

[features]
## Enables [`bevy`](https://docs.rs/bevy) support.
bevy = [ "dep:bevy", "aeronet/bevy" ]

[dependencies]
aeronet.workspace = true

derivative.workspace = true
tracing.workspace = true
thiserror.workspace = true
slotmap.workspace = true
crossbeam-channel.workspace = true

bevy = { workspace = true, optional = true }

[dev-dependencies]
bevy = { workspace = true, default-features = true }
bevy_egui.workspace = true
anyhow.workspace = true

[[example]]
name = "echo_plugin"
path = "examples/echo_plugin.rs"
required-features = [ "bevy" ]

[[example]]
name = "echo_manual"
path = "examples/echo_manual.rs"
required-features = [ "bevy" ]
