[package]
name = "aeronet_channel"
description = "In-memory MPSC channel transport implementation for aeronet"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true

[features]
## Enables [`bevy`](https://docs.rs/bevy) support.
bevy = ["dep:bevy_ecs", "aeronet/bevy"]

[dependencies]
aeronet.workspace = true
derivative.workspace = true
thiserror.workspace = true
slotmap.workspace = true
crossbeam-channel.workspace = true

bevy_ecs = { workspace = true, optional = true }

[dev-dependencies]
bevy.workspace = true
bevy_egui.workspace = true

[[example]]
name = "echo"
path = "examples/echo.rs"
required-features = ["bevy"]

[[example]]
name = "echo_conditioned"
path = "examples/echo_conditioned.rs"
required-features = ["bevy"]
