[package]
description = "Derive macros for aeronet"
name = "aeronet_derive"

authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[lib]
proc-macro = true

[package.metadata.docs.rs]
all-features = true

[dependencies]
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true
