[package]
name = "aeronet_h3"
version = "0.1.0"
edition = "2021"
description = "H3 WebTransport transport for aeronet"
authors = [ "aecsocket <aecsocket@tutanota.com>" ]
repository = "https://github.com/aecsocket/aeronet"
keywords = [ "gamedev", "network", "bevy" ]
categories = [ "game-development", "network-programming" ]
license = "MIT OR Apache-2.0"

[features]
bevy = [ "aeronet/bevy", "dep:bevy" ]

[dependencies]
aeronet = { path = "..", version = "0.1.0" }
thiserror = "1.0.47"
anyhow = "1.0.75"
derivative = "2.2.0"
bevy = { version = "0.11.2", default-features = false, optional = true }

h3 = { git = "https://github.com/hyperium/h3.git", rev = "a57ed22" }

[dev-dependencies]
bevy = "0.11.2"

[[example]]
name = "client"
path = "examples/client.rs"
required-features = [ "bevy" ]
