[package]
description = "Sans-IO protocol implementation for aeronet"
name = "aeronet_proto"

authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true

[features]
## Enables [`bevy_replicon`](https://docs.rs/bevy_replicon) support.
replicon = ["aeronet/replicon", "dep:bevy_replicon"]

[dependencies]
aeronet = { workspace = true }

ahash = { workspace = true }
arbitrary = { workspace = true }
bitvec = { workspace = true }
bytes = { workspace = true }
derivative = { workspace = true }
either = { workspace = true }
octs = { workspace = true }
static_assertions = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
web-time = { workspace = true }

bevy_replicon = { workspace = true, optional = true }

[dev-dependencies]
assert_matches.workspace = true
