[package]
name = "aeronet_replicon"
description = "bevy_replicon backend implementation using aeronet"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true

[dependencies]
aeronet.workspace = true
tracing.workspace = true
derivative.workspace = true
thiserror.workspace = true
ahash.workspace = true
bevy.workspace = true
bevy_replicon.workspace = true
