[package]
name = "aeronet_steam"
description = "Steam networking socket implementation for aeronet"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true

[features]
## Enables [`bevy`](https://docs.rs/bevy) support.
bevy = [ "aeronet/bevy", "dep:bevy" ]

[dependencies]
aeronet.workspace = true

derivative.workspace = true
tracing.workspace = true
thiserror.workspace = true
slotmap.workspace = true
futures.workspace = true
rand.workspace = true
tokio = { workspace = true, default-features = false, features = [ "rt" ] }
wtransport.workspace = true
steamworks.workspace = true

bevy = { workspace = true, optional = true }

[dev-dependencies]
bevy = { workspace = true, default-features = true }
bevy_egui.workspace = true
anyhow.workspace = true

[[example]]
name = "client"
path = "examples/client.rs"
required-features = [ "bevy" ]

[[example]]
name = "server"
path = "examples/server.rs"
required-features = [ "bevy" ]
