[package]
name = "aeronet_steam"
description = "Steam networking socket implementation for aeronet"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true

[features]
## Enables [`bevy`](https://docs.rs/bevy) support.
bevy = ["dep:bevy", "aeronet/bevy", "aeronet/bevy-tokio-rt"]

[dependencies]
aeronet.workspace = true
aeronet_protocol.workspace = true
derivative.workspace = true
tracing.workspace = true
thiserror.workspace = true
slotmap.workspace = true
ahash.workspace = true
bytes.workspace = true
futures.workspace = true
either.workspace = true
wtransport.workspace = true
steamworks.workspace = true

bevy = { workspace = true, optional = true }

[dev-dependencies]
bevy = { workspace = true, default-features = true }
bevy_egui.workspace = true
anyhow.workspace = true

[[example]]
name = "echo_client"
path = "examples/echo_client.rs"
required-features = ["bevy"]

[[example]]
name = "echo_server"
path = "examples/echo_server.rs"
required-features = ["bevy"]
