[package]
name = "aeronet_webtransport"
description = "WebTransport transport implementation for aeronet"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
rustflags = ["--cfg=web_sys_unstable_apis"]

[features]
## Enables [`bevy`](https://docs.rs/bevy) support.
bevy = ["dep:bevy_ecs", "aeronet/bevy"]

## Enables [`rustls/dangerous-configuration`](https://docs.rs/rustls/latest/rustls/#crate-features)
## on targets building against native `wtransport`.
dangerous-configuration = ["wtransport/dangerous-configuration"]

[dependencies]
aeronet.workspace = true
aeronet_protocol.workspace = true
tracing.workspace = true
derivative.workspace = true
thiserror.workspace = true
either.workspace = true
slotmap.workspace = true
bytes.workspace = true
cfg-if.workspace = true
futures.workspace = true
xwt.workspace = true
xwt-core.workspace = true

bevy_ecs = { workspace = true, optional = true }

[target.'cfg(target_family = "wasm")'.dependencies]
js-sys.workspace = true
web-sys.workspace = true

[target.'cfg(not(target_family = "wasm"))'.dependencies]
wtransport.workspace = true
tokio = { workspace = true, features = ["rt"] }

[dev-dependencies]
bevy.workspace = true
bevy_egui.workspace = true
anyhow.workspace = true

[target.'cfg(target_family = "wasm")'.dev-dependencies]
wasm-bindgen-futures.workspace = true

[[example]]
name = "echo_client"
path = "examples/echo_client.rs"
required-features = ["bevy", "dangerous-configuration"]

[[example]]
name = "echo_client_wrong_version"
path = "examples/echo_client_wrong_version.rs"
required-features = ["bevy", "dangerous-configuration"]

[[example]]
name = "echo_server"
path = "examples/echo_server.rs"
required-features = ["bevy", "aeronet/bevy-tokio-rt"]
