[package]
description = "WebTransport transport implementation for aeronet"
name = "aeronet_webtransport"

authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
rustflags = ["--cfg=web_sys_unstable_apis"]

[features]
## Enables [`bevy`](https://docs.rs/bevy) support.
bevy = ["dep:bevy_ecs", "aeronet/bevy"]

## Enables [`rustls/dangerous-configuration`](https://docs.rs/rustls/latest/rustls/#crate-features)
## on targets building against native `wtransport`.
dangerous-configuration = ["wtransport/dangerous-configuration"]

[dependencies]
aeronet.workspace = true
aeronet_proto.workspace = true

bytes.workspace = true
cfg-if.workspace = true
derivative.workspace = true
either.workspace = true
futures.workspace = true
replace_with.workspace = true
slotmap.workspace = true
thiserror.workspace = true
tracing.workspace = true

xwt.workspace = true
xwt-core.workspace = true

bevy_ecs = { workspace = true, optional = true }

[target.'cfg(target_family = "wasm")'.dependencies]
js-sys.workspace = true
wasm-bindgen-futures.workspace = true
web-sys.workspace = true

[target.'cfg(not(target_family = "wasm"))'.dependencies]
tokio = { workspace = true, features = ["rt"] }
wtransport.workspace = true

[dev-dependencies]
aeronet_replicon.workspace = true

clap.workspace = true
serde.workspace = true

bevy.workspace = true
bevy_egui.workspace = true
bevy_replicon.workspace = true

[[example]]
name = "echo_client"
path = "examples/echo_client.rs"
required-features = ["bevy", "dangerous-configuration"]

[[example]]
name = "echo_client_wrong_version"
path = "examples/echo_client_wrong_version.rs"
required-features = ["bevy", "dangerous-configuration"]

[[example]]
name = "echo_server"
path = "examples/echo_server.rs"
required-features = ["bevy", "aeronet/bevy-tokio-rt"]

[[example]]
name = "box_demo_client"
path = "examples/box_demo_client.rs"
required-features = ["bevy", "dangerous-configuration"]

[[example]]
name = "box_demo_server"
path = "examples/box_demo_server.rs"
required-features = ["bevy"]
