[package]
name = "aeronet_wt_core"
version = "0.2.0"
edition = "2021"
description = "Core types for the WebTransport implementations for aeronet"
authors = [ "aecsocket <aecsocket@tutanota.com>" ]
repository = "https://github.com/aecsocket/aeronet"
keywords = [ "gamedev", "network", "bevy" ]
categories = [ "game-development", "network-programming" ]
license = "MIT OR Apache-2.0"

[dependencies]
aeronet = { path = "..", version = "0.2.0" }
aeronet_wt_core_derive = { path = "../aeronet_wt_core_derive", verison = "0.2.0" }
thiserror = "1.0"
anyhow = "1.0"
