[package]
name = "aeronet_wt_core"
description = "Core types for the WebTransport implementations for aeronet"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[package.metadata.docs.rs]
all-features = true

[dependencies]
aeronet.workspace = true
aeronet_wt_core_derive.workspace = true

thiserror.workspace = true
