[package]
name = "aeronet_wt_core_derive"
version = "0.3.0"
edition = "2021"
description = "Derive macros for aeronet_wt_core"
authors = [ "aecsocket <aecsocket@tutanota.com>" ]
repository = "https://github.com/aecsocket/aeronet"
keywords = [ "gamedev", "network", "bevy" ]
categories = [ "game-development", "network-programming" ]
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.69"
syn = "2.0.38"
quote = "1.0.33"

[package.metadata.docs.rs]
all-features = true
