[package]
name = "aeronet_wt_core_derive"
description = "Derive macros for aeronet_wt_core"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[lib]
proc-macro = true

[package.metadata.docs.rs]
all-features = true

[dependencies]
proc-macro2.workspace = true
syn.workspace = true
quote.workspace = true
