[package]
name = "aeronet_wt_native"
description = "Native WebTransport transport implementation for aeronet"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[package.metadata.docs.rs]
all-features = true

[features]
bevy = [ "dep:bevy", "aeronet/bevy" ]

[dependencies]
aeronet = { workspace = true, features = [ "bevy-tokio-rt" ] }
aeronet_wt_core.workspace = true

derivative.workspace = true
tracing.workspace = true
thiserror.workspace = true
futures.workspace = true
bevy = { workspace = true, default-features = false, optional = true }
tokio = { workspace = true, default-features = false, features = [ "rt" ] }
wtransport = { version = "0.1.6", features = [ "dangerous-configuration" ] }

[dev-dependencies]
base64 = "0.21.5"
rcgen = "0.11.3"
ring = "0.17.5"
time = "0.3.30"
bevy.workspace = true
bevy_egui.workspace = true
anyhow.workspace = true

[[example]]
name = "echo_client"
path = "examples/echo_client.rs"
required-features = [ "bevy" ]

[[example]]
name = "echo_server"
path = "examples/echo_server.rs"
required-features = [ "bevy" ]
