[package]
name = "aeronet_wt_native"
description = "Native WebTransport transport implementation for aeronet"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true

[features]
## Enables [`bevy`](https://docs.rs/bevy) support.
bevy = [ "dep:bevy", "aeronet/bevy", "aeronet/bevy-tokio-rt" ]

## Enables [`rustls/dangerous-configuration`](https://docs.rs/rustls/latest/rustls/#crate-features).
dangerous-configuration = [ "wtransport/dangerous-configuration" ]

[dependencies]
aeronet.workspace = true

derivative.workspace = true
tracing.workspace = true
thiserror.workspace = true
slotmap.workspace = true
futures.workspace = true
tokio = { workspace = true, features = [ "rt" ] }
wtransport.workspace = true

bevy = { workspace = true, optional = true }

[dev-dependencies]
bevy = { workspace = true, default-features = true }
bevy_egui.workspace = true
anyhow.workspace = true

base64.workspace = true
rcgen.workspace = true
ring.workspace = true
time.workspace = true

[[example]]
name = "client_echo"
path = "examples/client_echo.rs"
required-features = [ "bevy", "dangerous-configuration" ]

[[example]]
name = "server_echo"
path = "examples/server_echo.rs"
required-features = [ "bevy" ]

[[example]]
name = "client_complex"
path = "examples/client_complex.rs"
required-features = [ "bevy", "dangerous-configuration" ]

[[example]]
name = "server_complex"
path = "examples/server_complex.rs"
required-features = [ "bevy" ]
