[package]
name = "aeronet_wt_wasm"
version = "0.1.2"
edition = "2021"
description = "WASM WebTransport transport implementation for aeronet"
authors = [ "aecsocket <aecsocket@tutanota.com>" ]
repository = "https://github.com/aecsocket/aeronet"
keywords = [ "gamedev", "network", "bevy" ]
categories = [ "game-development", "network-programming" ]
license = "MIT OR Apache-2.0"

[lib]
crate-type = [ "rlib", "cdylib" ]

[features]
bevy = [ "dep:bevy", "aeronet/bevy" ]

[dependencies]
aeronet = { path = "..", version = "0.1.2" }
tracing = "0.1.37"
thiserror = "1.0.47"
anyhow = "1.0.75"
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.37"
js-sys = "0.3.64"
bevy = { version = "0.11.3", default-features = false, optional = true }

[dependencies.web-sys]
version = "0.3.64"
features = [
    "DomException",
    "ReadableStream",
    "WritableStream",
]

[dev-dependencies]
bevy = "0.11.3"
bevy_egui = "0.22.0"

[package.metadata.docs.rs]
all-features = true

[[example]]
name = "echo_client"
path = "examples/echo_client.rs"
required-features = [ "bevy" ]
