[package]
name = "aeronet_wt_wasm"
version = "0.2.0"
edition = "2021"
description = "WASM WebTransport transport implementation for aeronet"
authors = [ "aecsocket <aecsocket@tutanota.com>" ]
repository = "https://github.com/aecsocket/aeronet"
keywords = [ "gamedev", "network", "bevy" ]
categories = [ "game-development", "network-programming" ]
license = "MIT OR Apache-2.0"

[lib]
crate-type = [ "rlib", "cdylib" ]

[features]
bevy = [ "dep:bevy", "aeronet/bevy" ]

[dependencies]
aeronet = { path = "..", version = "0.2.0" }
tracing = "0.1.40"
thiserror = "1.0.50"
anyhow = "1.0.75"
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.37"
js-sys = "0.3.64"
crossbeam-channel = "0.5.8"
bevy = { version = "0.11.3", default-features = false, optional = true }

[dependencies.web-sys]
version = "0.3.64"
features = [
    # bindings.rs
    "DomException",
    "ReadableStream",
    "WritableStream",
    # client.rs
    "Blob",
    "Url",
    "Worker",
    "ReadableStreamDefaultReader",
    "WritableStreamDefaultWriter",
    "MessageEvent",
]

[dev-dependencies]
bevy = "0.11.3"
bevy_egui = "0.22.0"

[package.metadata.docs.rs]
all-features = true

[[example]]
name = "client"
path = "examples/client.rs"
required-features = [ "bevy" ]
